--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/enable_wifi_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/enable_wifi_button"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/detect_devices_button"
+        android:layout_marginTop="@dimen/margin_10dp"/>
+
+    <Button
+        android:id="@+id/detect_devices_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/detect_devices_button"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/enable_wifi_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/margin_10dp"/>
+
     <TextView
         android:id="@+id/set_params_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/set_init_params"
         app:layout_constraintWidth_percent="0.6"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/enable_wifi_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
