--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,110 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.main.MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.borysenko.multicrypto.ui.MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/enable_wifi_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/enable_wifi_button"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/detect_devices_button"
-        android:layout_marginTop="@dimen/margin_10dp"/>
-
-    <Button
-        android:id="@+id/detect_devices_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/detect_devices_button"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/enable_wifi_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/margin_10dp"/>
-
     <TextView
-        android:id="@+id/set_params_view"
+        android:id="@+id/main_title"
+        style="@style/TextBold.MainApp.24"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/set_init_params"
-        app:layout_constraintWidth_percent="0.6"
-        app:layout_constraintTop_toBottomOf="@id/enable_wifi_button"
+        android:layout_margin="@dimen/margin_10dp"
+        android:text="@string/my_files"
+        android:gravity="center"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:id="@+id/set_init_params_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/set_init_param_button"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintTop_toBottomOf="@id/set_params_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/number_of_devices"
-        android:layout_marginTop="@dimen/margin_10dp"/>
+    <!--<androidx.recyclerview.widget.RecyclerView-->
+    <!--android:id="@+id/encrypted_recycler_view"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="0dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/main_title"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent" />-->
 
-    <EditText
-        android:id="@+id/number_of_devices"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintTop_toTopOf="@id/set_init_params_button"
-        app:layout_constraintStart_toEndOf="@id/set_init_params_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/margin_10dp"
-        tools:ignore="Autofill,LabelFor" />
-
-    <Button
-        android:id="@+id/choose_file_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/choose_file_button"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintTop_toBottomOf="@id/set_init_params_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/margin_10dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<androidx.constraintlayout.widget.ConstraintLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--tools:context="com.borysenko.multicrypto.ui.main.MainActivity"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<Button-->
+    <!--android:id="@+id/enable_wifi_button"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/enable_wifi_button"-->
+    <!--app:layout_constraintWidth_percent="0.4"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintEnd_toStartOf="@id/detect_devices_button"-->
+    <!--android:layout_marginTop="@dimen/margin_10dp"/>-->
+
+    <!--<Button-->
+    <!--android:id="@+id/detect_devices_button"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/detect_devices_button"-->
+    <!--app:layout_constraintWidth_percent="0.4"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--app:layout_constraintStart_toEndOf="@id/enable_wifi_button"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--android:layout_marginTop="@dimen/margin_10dp"/>-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/set_params_view"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/set_init_params"-->
+    <!--app:layout_constraintWidth_percent="0.6"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/enable_wifi_button"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"/>-->
+
+    <!--<Button-->
+    <!--android:id="@+id/set_init_params_button"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/set_init_param_button"-->
+    <!--app:layout_constraintWidth_percent="0.4"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/set_params_view"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintEnd_toStartOf="@id/number_of_devices"-->
+    <!--android:layout_marginTop="@dimen/margin_10dp"/>-->
+
+    <!--<EditText-->
+    <!--android:id="@+id/number_of_devices"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:inputType="number"-->
+    <!--android:ems="10"-->
+    <!--app:layout_constraintWidth_percent="0.2"-->
+    <!--app:layout_constraintTop_toTopOf="@id/set_init_params_button"-->
+    <!--app:layout_constraintStart_toEndOf="@id/set_init_params_button"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--android:layout_marginTop="@dimen/margin_10dp"-->
+    <!--tools:ignore="Autofill,LabelFor" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/choose_file_button"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="@string/choose_file_button"-->
+    <!--app:layout_constraintWidth_percent="0.4"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/set_init_params_button"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--android:layout_marginTop="@dimen/margin_10dp" />-->
+    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
