--- a/app/src/main/res/values/font.xml
+++ b/app/src/main/res/values/font.xml
@@ -26,6 +26,10 @@
         <item name="android:textColor">?attr/colorMainApp</item>
     </style>
 
+    <style name="TextBold.MainAppMiddle">
+        <item name="android:textColor">?attr/colorMainAppMiddle</item>
+    </style>
+
     <style name="TextBold.MainAppText">
         <item name="android:textColor">?attr/colorMainAppText</item>
     </style>
@@ -35,5 +39,17 @@
     <!--bold sizes-->
     <style name="TextBold.MainApp.24">
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="TextBold.MainApp.16">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextBold.MainAppText.14">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextBold.MainAppMiddle.16">
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
