--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorMainAppBackground">#FFEAE6</color>
     <color name="colorMainAppText">#545455</color>
 
+    <color name="colorDecrypted">#F5830B</color>
+    <color name="colorEncrypted">#9D00F5</color>
+
     <color name="colorLightGrey">#AFAFB6</color>
 </resources>
