begin to implement peer to peer connection(connect devices and send msg)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorEncrypted">#9D00F5</color>
 
     <color name="colorLightGrey">#AFAFB6</color>
+    <color name="colorLightLightGrey">#E4E4E4</color>
 </resources>
