--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_10dp"
+        android:background="@color/colorLightLightGrey"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintWidth_percent="0.7"
         app:layout_constraintHorizontal_bias="0.5"
@@ -43,11 +44,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:id="@+id/connected_devices_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_10dp"
+        android:background="@color/colorLightGrey"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintHorizontal_bias="0.5"
