--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/set_connection_button"
+        android:id="@+id/begin_detection_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10dp"
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <ListView
-        android:id="@+id/connected_devices_recycler"
+        android:id="@+id/found_devices_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_10dp"
@@ -53,19 +53,31 @@
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@id/set_connection_button"
+        app:layout_constraintTop_toBottomOf="@id/begin_detection_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/encryption_button"
+        android:id="@+id/send_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_10dp"
+        android:text="@string/send_text"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintTop_toBottomOf="@id/found_devices_recycler"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/connect_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10dp"
         android:text="@string/convert_file_button"
         app:layout_constraintWidth_percent="0.4"
         app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintTop_toBottomOf="@id/connected_devices_recycler"
+        app:layout_constraintTop_toBottomOf="@id/found_devices_recycler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
